--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.16.2",
     "@fastify/redis": "^7.0.1",
     "amqplib": "^0.10.5",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "elasticsearch": "^16.7.3",
     "fastify": "^5.1.0",
     "zod": "^3.23.8"
   },
