--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "start:debug": "tsx watch --inspect src/server.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mariana Bastos",
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.16.2",
     "@fastify/redis": "^7.0.1",
+    "@fastify/view": "^10.0.1",
     "amqplib": "^0.10.5",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
+    "handlebars": "^4.7.8",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@types/handlebars": "^4.1.0",
     "@types/node": "^22.8.6",
     "prettier": "^3.3.3",
     "tsx": "^4.19.2",
