chore: add env example

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ PORT=
 BASE_URL=
 EXTERNAL_API_USERNAME=
 EXTERNAL_API_PASSWORD=
+RABBITMQ_CONNECTION=
+RABBITMQ_QUEUE=
+REDIS_URL=
+ELASTICSEARCH_URL=
